# libconfiguration

./: CMakeLists.txt  SharemindLibConfigurationConfig.cmake.in  SharemindLibConfigurationConfigVersion.cmake.in
src/: Configuration.cpp  Configuration.h  EnsureTrailingSlash_p.h  HomeDirectory.cpp  HomeDirectory.h  Path.cpp  Path.h  XdgBaseDirectory.cpp  XdgBaseDirectory.h
tests/: TestXdgBaseDirectory.cpp
